test/libhyperion/syntaxTests/functionTypes/external_function_type_public_variable.hyp
contract C {
    function (uint) external public x;

    function g(uint) public {
        x = this.g;
    }
    function f() public view returns (function(uint) external) {
        return this.x();
    }
}
// ----
// TypeError 4888: (17-50): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
